# AERO62520-Robotic-Systems-Design-Project

./: README.md
Leo_Simulation/: README.md
Leo_Simulation/src/my_robot_sim/config/: bridge.yaml  mapper_params_online_async.yaml  nav2_params.yaml
Leo_Simulation/src/my_robot_sim/launch/: leo_sim_nav.launch.py
Simulation/leo_common-ros2/leo_description/urdf/: macros.xacro
Simulation/leo_simulator-ros2/leo_gz_bringup/: ROBOT_SPAWN_POSITION.md  package.xml
Simulation/leo_simulator-ros2/leo_gz_bringup/launch/: leo_gz.launch.py  leo_gz_rviz.launch.py  spawn_robot.launch.py
Simulation/leo_simulator-ros2/leo_gz_bringup/rviz/: leo_gz.rviz
Simulation/leo_simulator-ros2/leo_gz_worlds/: OBSTACLES_GUIDE.md  README_OBSTACLES.md
Simulation/leo_simulator-ros2/leo_gz_worlds/worlds/: leo_empty.sdf  leo_with_obstacles.sdf
controller/src/my_robot_interfaces/: CMakeLists.txt
controller/src/my_robot_interfaces/msg/: ObjectTarget.msg
controller/src/robot_control_system/: README.md  package.xml  setup.py
controller/src/robot_control_system/launch/: system_control.launch.py
manipulatior/ros2_ws/install/: local_setup.sh  setup.bash
manipulatior/ros2_ws/log/: latest_build
manipulator/ros2_ws/install/: setup.ps1  setup.sh  setup.zsh
rgbd-perception/: yolo_finetuning.py  yolo_livetesting_personalcomputer.py
slam_navigation/: package.xml  setup.cfg  setup.py
slam_navigation/config/: nvblox_params.yaml  robot_config.yaml  slam_toolbox_params.yaml
slam_navigation/launch/: slam_full.launch.py
slam_navigation/slam_navigation/: cmd_vel_transformer.py  slam_manager.py
(+60 files in other folders)
